src/style.css
@import url('https://fonts.googleapis.com/css2?family=Arima&family=Edu+VIC+WA+NT+Beginner:wght@500&family=Roboto:wght@400;700&display=swap');

:root {
    --highlight-color: rgb(255, 255, 255);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto';
}

header {
    display: flex;
    height: 150px;
    align-items: center;
    box-shadow: 0 0 3px 1px black;
    padding: 0 25px;
    background: var(--highlight-color);
}

header > button {
    margin: 0 3vw;
    background: none;
    border: none;
    font-size: 20px;
}

#restaurant-name {
    font-size: 48px;
    font-family: 'Edu VIC WA NT Beginner', sans-serif;
    font-weight: 600;
    margin-right: auto;
}

#main-content {
    position: relative;
}

#main-food-image {
    width: 100vw;
    height: auto;
    position: relative;
    z-index: -1;
}

.motto {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: var(--highlight-color);
    font-size: 48px;
    width: fit-content;
    font-family: 'Arima', sans-serif;
    font-weight: bold;
}

